Wrote primitive error catching system. It's not finished yet. The app intercepts blank city field and doesn't send a request. Also if there isn't an internet connection -- the notification pops up when you try to get forecast. In HTML added new div that tells you about the error cause. In CSS made animation for smooth error message appearing and border color and text changing.
Added package builder files and .gitignore

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
         <input type="text" name="country" id="countryInput" autocomplete="off" placeholder="Your country(optional)">
         <input type="submit" value="Get Forecast" id="getWeather">
     </form>
+    <div id="input-error" class="hide">City with such name is not found</div>
     <i class="wi wi-day-sunny" id="weather-logo"></i>
     <div id="location">
         <p id="city">London</p>
