--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,39 @@
         <input type="text" name="country" id="countryInput" autocomplete="off" placeholder="Your country(optional)">
         <input type="submit" value="Get Forecast" id="getWeather">
     </form>
+    <div class="forecast-options">
+        <p id="forecast-options-p">Choose what information do you need</p>
+        <div class="checkboxes hide" id="forecast-checkboxes">
+            <label>
+                <input type="checkbox" id="zalupa" name="actual-temp-cb" checked>
+                Actual Temperature
+            </label>
+            <label>
+                <input type="checkbox" name="feels-like-cb" checked>
+                Feels Like
+            </label>
+            <label>
+                <input type="checkbox" name="min-temp-cb" checked>
+                Minimal Temperature
+            </label>
+            <label>
+                <input type="checkbox" name="max-temp-cb" checked>
+                Maximal Temperature
+            </label>
+            <label>
+                <input type="checkbox" name="humidity-cb" checked>
+                Humidity
+            </label>
+            <label>
+                <input type="checkbox" name="pressure-cb" checked>
+                Pressure
+            </label>
+            <label>
+                <input type="checkbox" name="precipitation-cb" checked>
+                Precipitation
+            </label>
+        </div>
+    </div>
     <div id="input-error" class="hide">City with such name is not found</div>
     <i class="wi wi-day-sunny" id="weather-logo"></i>
     <div id="location">
@@ -29,18 +62,32 @@
     </div>
     <div id="temperature">
         <div class="temp-col">
-            <p class="temp" id="temp-act">Actual temperature: 1°</p>
-            <p class="temp" id="temp-min">Min temp: 1°</p>
+            <p class="temp">Actual temperature:
+                <span id="temp-act" class="val">1°C</span>
+            </p>
+            <p class="temp">Min temp:
+                <span id="temp-min" class="val">1°C</span>
+            </p>
         </div>
         <div class="temp-col">
-            <p class="temp" id="temp-feels">Feels like: 1°</p>
-            <p class="temp" id="temp-max">Max temp: 1°</p>
+            <p class="temp">Feels like:
+                <span id="temp-feels" class="val">1°C</span>
+            </p>
+            <p class="temp">Max temp:
+                <span id="temp-max" class="val">1°C</span>
+            </p>
         </div>
     </div>
     <div id="other-weather">
-        <p class="other" id="humidity">Humidity: 0%</p>
-        <p class="other" id="pressure">Pressure: 0mm</p>
-        <p class="other" id="precipitation">Precipitation : 0mm</p>
+        <p class="other">Humidity:
+            <span id="humidity" class="val" checked>0%</span>
+        </p>
+        <p class="other">Pressure:
+            <span id="pressure" class="val">0mm</span>
+        </p>
+        <p class="other">Precipitation :
+            <span id="precipitation" class="val">0mm</span>
+        </p>
     </div>
 
     <div id="wind">
